--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,9 @@ body {
     text-align: center;
   }
 
-  fieldset {
+  div {
     border: none;
+    margin: 20px
   }
 
   .lead {
@@ -17,7 +18,7 @@ body {
     background: #edfaf1;
     padding: 20px;
     border-radius: 15px;
-    margin: 10px 0;
+    margin: 10px 70px 10px 70px;
   }
 
   section h2 {
@@ -49,8 +50,33 @@ body {
 
   label {
     display: block;
+    padding-bottom: 3px 
   }
 
-  inline-label {
-    display: inline;
+  div.inline-label {
+    display: inline-flex;
+    height: 20px;
+    margin: auto;
+    padding-bottom: 15px
+  }
+
+  header {
+    margin: 10px 70px 10px 70px;
+  }
+
+  textarea {
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+  }
+
+  .smoothies {
+    padding-bottom: 20px
+  }
+
+  button {
+    width: 30%;
+    background-color: #05f264;
+    height: 30px;
+    border-radius: 20px;
   }
